# ADServer

./: .dockerignore  .gitignore  .gitmodules  README.md  config.example.toml  docker-compose.yml  pyproject.toml  pyrightconfig.json  shell.nix
.github/workflows/: release.yml  tests.yml
caronte/: Dockerfile  docker-compose.yml
destructivefarm/: Dockerfile  config-example.py  docker-compose.yml
tests/: Dockerfile  README.md  config.test.toml  conftest.py  docker-compose.yml  test_caronte.py  test_destructivefarm.py  test_rsa  test_scripts.py  test_worker.py
tests/git/: Dockerfile  test_rsa.pub
worker/: Dockerfile  __main__.py  caronte.py  config.py  destructivefarm.py  rsyncer.py  scripts.py  ssh.py  utils.py  worker.py
worker/scripts/: autosetup.py  check_keys.py  check_repo.py  setup_git.py  setup_keys.py  status.py
