[tool.poetry]
name = "adserver"
version = "1.0.0"
description = "A fast to setup support server for AD ctfs"
authors = ["rikyiso01 <riky.isola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
paramiko = "^3.0.0"
httpx = "^0.23.3"
pydantic = "^2.0.3"
termcolor = "^2.3.0"
result = "^0.13.1"
attrs = "^23.1.0"
typer = "^0.9.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
